FINERACT-2234 Revert LoanContractTerminationServiceImpl